feat: implement PHASE-7 - rendering system with ResourceRenderer, FormRenderer, FieldRenderer, TableRenderer, PageRenderer and tests

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
             ]
         }
     },
+    "scripts": {
+        "test": "phpunit tests/Unit/ --testdox"
+    },
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
