--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@babel/runtime": "^7.28.4",
         "ace-builds": "^1.43.4",
         "autobind-decorator": "^2.4.0",
+        "cropperjs": "^1.6.2",
         "jodit": "^4.7.4",
         "perfect-scrollbar": "^1.5.6",
         "sortablejs": "^1.15.6"
