Add cache clearing functionality with menu integration
- Add CacheService with methods to clear app/config/route/view caches
- Add CacheController with POST endpoint for cache clearing
- Register cache routes in RouteRegistrar
- Add CacheMenuSeeder to seed menu items under System
- Add JS module for AJAX cache clearing with toast notifications
- Add translations (en/ru) for cache-related messages
- Update InstallCommand to run CacheMenuSeeder

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Monstrex\\Ave\\": "src/"
+            "Monstrex\\Ave\\": "src/",
+            "Monstrex\\Ave\\Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "src/Helpers/helpers.php"
