Update composer.json: fix author name consistency
- Changed author name from 'Monstrex' to 'MonstreX'
- Changed email from 'info@monstrex.dev' to 'dev@monstrex.dev'
- Match with ave-site package naming

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "keywords": ["laravel", "admin", "panel", "ave"],
     "authors": [
         {
-            "name": "Monstrex",
-            "email": "info@monstrex.dev"
+            "name": "MonstreX",
+            "email": "dev@monstrex.dev"
         }
     ],
     "require": {
