Update author email to fido6080net@gmail.com

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "MonstreX",
-            "email": "dev@monstrex.dev"
+            "email": "fido6080net@gmail.com"
         }
     ],
     "require": {
