--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Monstrex\\Ave\\": "src/",
-            "Monstrex\\Ave\\Database\\Seeders\\": "database/seeders/"
+            "Monstrex\\Ave\\": "src/"
         },
         "files": [
             "src/Helpers/helpers.php"
