Add Database Manager core layer with Doctrine DBAL integration
- Add doctrine/dbal ^4.3 dependency
- Port DoctrineManager for Laravel-Doctrine connection management
- Port Schema layer (SchemaManager, Table, Column, Index, ForeignKey, Identifier)
- Port DatabaseUpdater for table structure modifications
- Add Type base class for database type management
- Create Database directory structure (Schema, Types, Platforms)
- All classes tested via Tinker - working correctly

This is phase 1 of Database Manager implementation (backend core).
Next: DatabaseController, Routes, Frontend UI components.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "illuminate/routing": "^12.0",
         "illuminate/validation": "^12.0",
         "illuminate/database": "^12.0",
-        "illuminate/view": "^12.0"
+        "illuminate/view": "^12.0",
+        "doctrine/dbal": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
