--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Monstrex\\Ave\\": "src/"
+            "Monstrex\\Ave\\": "src/",
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "src/Helpers/helpers.php"
